Fixed z-index issue with inline menu

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -82,7 +82,7 @@ em {
   list-style: none;
   margin: 0;
   padding: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .richEditor-menuItem {
