--- a/applications/dashboard/scss/new-features/richEditor.scss
+++ b/applications/dashboard/scss/new-features/richEditor.scss
@@ -90,7 +90,7 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
   list-style: none;
   margin: 0;
   padding: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .richEditor-menuItem {
